force-app/main/default/objects/Application_Commissioner__c/Application_Commissioner__c.object-meta.xml
<CustomObject>
    <description>This will be a junction object between commissioner and application and will allow one commissioner to be added to multiple applications (saves too many contact records being created).</description>
    <label>Application Commissioner</label>
    <nameField>
        <label>Application Commisioner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Commissioners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>