force-app/main/default/objects/Application_Commissioner__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <description>This is the application the commissioner is related to.</description>
    <inlineHelpText>This is the application the commissioner is related to.</inlineHelpText>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Application Commissioners</relationshipLabel>
    <relationshipName>Application_Commissioners</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>