force-app/main/default/objects/Application_Commissioner__c/fields/Commissioner__c.field-meta.xml
<CustomField>
    <fullName>Commissioner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commissioner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Application Commissioners</relationshipLabel>
    <relationshipName>Application_Commissioners</relationshipName>
    <type>Lookup</type>
</CustomField>