force-app/main/default/objects/Application_Commissioner__c/fields/Is_Lead_Commissioner__c.field-meta.xml
<CustomField>
    <fullName>Is_Lead_Commissioner__c</fullName>
    <label>Is Lead Commissioner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>