force-app/main/default/objects/Application_Commissioner__c/fields/Organisation_Region__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Region__c</fullName>
    <label>Organisation Region</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Organisation_Region</valueSetName>
    </valueSet>
</CustomField>